Fix quantity layout bug on mobile

--- a/pages/Cart/cart.css
+++ b/pages/Cart/cart.css
@@ -453,7 +453,7 @@ ul.cart-list {
     }
 
     .quantity-control {
-        width: 80%;
+        width: 93px;
         margin-top: 1.6rem;
         margin-left: auto;
         margin-right: auto;
